--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,24 @@
 language: minimal
 
-services: docker
+services:
+  - docker
 
-env:
-  - DOCKER_COMPOSE_VERSION=1.23.2
-
-before_install:
-  - docker -v && docker-compose -v
-  - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
-  - curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl
-  - chmod +x ./kubectl
-  - sudo mv ./kubectl /usr/local/bin/kubectl
-
+# Pre-testing installs
 install:
-  - docker-compose -f ./docker-compose-build.yaml build --parallel
+  - echo "nothing needs to be installed"
 
+# Scripts to be run such as tests
 before_script:
   - echo "no tests"
 
 script:
   - docker --version # print the version for logging
+
+# Build
+  - docker build -t reverseproxy ./udagram-reverseproxy
+  - docker build -t udagram-api-user ./udagram-api-user
+  - docker build -t udagram-api-feed ./udagram-api-feed
+  - docker build -t udagram-frontend ./udagram-frontend
 
 # Tagging
   - docker tag reverseproxy chuongduong29/reverseproxy
